--- a/eks.yaml
+++ b/eks.yaml
@@ -12,4 +12,4 @@ managedNodeGroups:
     spot: true
     desiredCapacity: 3
     ssh:
-      publicKeyName: kubernetes # replace this with your keypair exists in AWS.
+      publicKeyName: eksctl # replace this with your keypair exists in AWS.
